<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".jobpost"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/ic_person_black_24dp" />

    <Button
        android:id="@+id/btn_confirmImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="75dp"
        android:layout_marginRight="25dp"
        android:text="upload yor cv"
        android:textSize="20sp"
        android:background="@drawable/bg_ui"
        android:textColor="#fff"/>

    <TextView
        android:id="@+id/imageName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_confirmImage"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:enabled="false"
        android:hint="Image Name"
        android:textSize="20sp"
        android:textColorHint="#000"
        android:textColor="@color/cardview_shadow_end_color"/>

    <TextView
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageName"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:hint="post name"
        android:textSize="20sp"
        android:textColorHint="#000"
        />
    <Button
        android:id="@+id/btn_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:enabled="false"
        android:text="Apply Job"
        android:textSize="20sp"
        android:background="@drawable/bg_ui"
        android:textColor="@color/colorPrimaryDark"/>


</RelativeLayout>