...
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".showfulljobpost">

    <ScrollView
        android:id="@+id/tv_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                android:layout_below="@id/tv_price"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="25dp" />
            <Button
                android:id="@+id/apply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="apply"
                android:background="@drawable/bg_ui"/>
        </LinearLayout>
    </ScrollView>
...
