<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".jobpost"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/ic_person_black_24dp" />

    <Button
        android:id="@+id/btn_confirmImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="75dp"
        android:layout_marginRight="25dp"
        android:text="Confirm Image"
        android:textSize="20sp"
        android:background="@drawable/bg_ui"
        android:textColor="#fff"/>


    <EditText
        android:id="@+id/postname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_confirmImage"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:hint="post name"
        android:textSize="20sp"
        android:textColorHint="#000"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/applicantno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/postname"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:hint="applicant no"
        android:inputType="number"
        android:textSize="20sp"
        android:textColorHint="#000"
        android:textColor="@color/colorPrimary"/>
    <EditText
        android:id="@+id/deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/applicantno"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:hint="Deadline (YY/DD/MM)"
        android:inputType="date"
        android:textSize="20sp"
        android:textColorHint="#000"
        android:textColor="@color/colorPrimary"/>
    <EditText
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/deadline"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:hint="category"
        android:inputType="date"
        android:textSize="20sp"
        android:textColorHint="#000"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/imageName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/category"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:enabled="false"
        android:hint="Image Name"
        android:textSize="20sp"
        android:textColorHint="#000"
        android:textColor="#000"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/imageName"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:hint="Number"
        android:inputType="phone"
        android:textSize="20sp"
        android:textColorHint="#000"
        android:textColor="#000"/>

    <Button
        android:id="@+id/btn_addpost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:enabled="false"
        android:text="Add post"
        android:textSize="20sp"
        android:background="@drawable/bg_ui"
        android:textColor="@color/colorPrimaryDark"/>

</RelativeLayout>