...
            android:layout_marginLeft="18dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:id="@+id/job"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
...
